--- a/src/pages/css/Ordering.css
+++ b/src/pages/css/Ordering.css
@@ -1,3 +1,36 @@
+#company-hero {
+  padding-block: 0.75rem;
+}
+
+#banner {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 8px;
+  box-shadow: 1px 4px 12px 6px rgba(0, 0, 0, 0.15);
+}
+
+#company-info {
+    padding-top: 1rem;
+}
+
+@media only screen and (max-width: 767px) {
+  #company-hero {
+    padding-top: 0rem;
+  }
+
+  #banner-container {
+    padding: 0 !important;
+    left: -8px;
+    min-width: calc(100% + 16px);
+  }
+
+  #banner {
+    border-radius: 0;
+  }
+}
+
 .food-item {
   display: flex !important;
   height: 100%;
