--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@ body {
   padding: 0;
 }
 
+:root {
+  --primary-color: rgb(255, 190, 60);
+}
+
 #root {
   height: 100%;
   min-height: 100%;
@@ -24,11 +28,9 @@ body {
   width: 100%;
   max-width: 1000px;
   margin-inline: auto;
-  padding-inline: 18px;
   background-color: white;
   box-sizing: inherit;
   box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.08);
-  padding-bottom: 2rem;
 }
 
 img {
