--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,11 @@ body {
   box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.08);
 }
 
+.flex-container {
+  display: flex;
+  flex-direction: column;
+}
+
 img {
   font-style: italic;
 }
