--- a/src/pages/css/Ordering.css
+++ b/src/pages/css/Ordering.css
@@ -113,16 +113,6 @@
   font-size: 15px;
 }
 
-#bottom-bar {
-  display: flex;
-  align-items: stretch;
-  z-index: 1000;
-  position: sticky;
-  bottom: -0;
-  border-top: 0.8px solid rgb(215, 220, 225);
-  background-color: rgb(255, 255, 255);
-}
-
 .seat-button {
   padding: 0.75em !important;
   height: auto !important;
@@ -135,17 +125,11 @@
   border: 0.8px solid rgb(215, 220, 225);
 }
 
-.table-no {
-  font-size: 16px;
-  margin-left: 0.5em;
-}
-
 .cart-line {
   background-color: var(--primary-color);
   height: 100%;
   border-radius: 6px 30px 30px 6px;
   padding-inline: 1em 0.5em;
-  margin-left: 0.5em;
   cursor: pointer;
 }
 
@@ -165,17 +149,18 @@
     width: 45px !important;
   }
 
-  .table-no {
-    font-size: 16px;
-    letter-spacing: -1px;
-    margin-left: 0;
-  }
-
-  .cart-line {
-    margin-left: 0;
-  }
-
   .cart-price {
     font-size: 14px;
   }
+}
+
+.table-no {
+  padding-inline: 0.75em;
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, 0.85);
+}
+
+.table-no * {
+  color: rgba(255, 255, 255, 0.85);
+  line-height: 1.25em;
 }
