progress | cart 80% done

--- a/src/components/css/Cart.css
+++ b/src/components/css/Cart.css
@@ -1,6 +1,7 @@
 .cart-entry {
   padding: 12px 18px;
   border-bottom: 0.8px solid rgb(215, 220, 225);
+  background-color: rgb(255, 255, 255);
 }
 
 .cart-entry-quantity {
